nginx-ingress-rc.yaml
# Creates a loadbalancer on choosen cloud platform
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
spec:
  type: LoadBalancer #<-- Creates L4 loadbalancer
  ports:
    - port: 80 #<-- the LB listens on this port
      name: http
    - port: 443 #<-- the LB listens on this port
      name: https
  selector:
    app: nginx-ingress #<-- alltraffic is passed to this label
