onkyo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: onkyo-svc
  labels:
    app: onkyo
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: onkyo
