cafe-ingress.yaml
# posts its ingress to the master to be picked up by the nginx ingress controller
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  annotations:
      kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - cafe.example.com
    secretName: cafe-secret
  - hosts:
    - www.onkyomusic.com
    secretName: tls-secret
  rules:
  - host: cafe.example.com
    http:
      paths:
      - path: /tea
        backend:
          serviceName: tea-svc
          servicePort: 80
      - path: /coffee
        backend:
          serviceName: coffee-svc
          servicePort: 80
  - host: www.onkyomusic.com
    http:
      paths:
      - path: /
        backend:
          serviceName: onkyo-svc
          servicePort: 80
